---
config:
  layout: elk
---
erDiagram
    direction TB

    AUTH_ACCOUNTS {
        uuid user_id FK
        enum provider PK
        varchar provider_user_id PK
        varchar hashed_password
    }

    USER_LINKED_WALLETS {
        uuid user_id PK, FK
        varchar wallet_address PK
        boolean is_auth_wallet
    }

    USER_TOKEN_WATCH_LIST {
        uuid user_id PK, FK
        varchar token_address PK
    }

    USERS {
        uuid id PK
        varchar email
        varchar display_name
        varchar stripe_customer_id
    }

    USER_WALLET_WATCH_LIST {
        uuid user_id PK, FK
        varchar wallet_address PK
    }

    USER_WALLET_LABELS {
        uuid user_id PK, FK
        varchar wallet_address PK
        varchar label
    }

    SUBSCRIPTIONS {
        uuid id PK
        uuid user_id FK
        enum plan_tier
        enum status
    }

    PAYMENT_HISTORY {
        uuid id PK
        uuid user_id FK
        uuid subscription_id FK
        integer amount_cents
        enum status
    }

    USERS ||--o{ AUTH_ACCOUNTS : owns
    USERS ||--o{ USER_LINKED_WALLETS : links
    USERS ||--o{ USER_TOKEN_WATCH_LIST : watches
    USERS ||--o{ USER_WALLET_WATCH_LIST : watches
    USERS ||--o{ USER_WALLET_LABELS : labels
    USERS ||--o{ SUBSCRIPTIONS : subscribes
    USERS ||--o{ PAYMENT_HISTORY : pays
    SUBSCRIPTIONS o|--o{ PAYMENT_HISTORY : invoices